adjust all files

--- a/lesson08/exercise02/start/index.html
+++ b/lesson08/exercise02/start/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Lesson 08: Exercise 02: floating a block-level element - finished</title>
+		<title>Lesson 08: Exercise 02: floating a block-level element - start</title>
 	    <link href="styles.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
 			<h1>
-				Lesson 08: Exercise 02: floating a block-level element - finished
+				Lesson 08: Exercise 02: floating a block-level element - start
 			</h1>
 			<h2 class="example01">float: left</h2>
 			<p>
