--- a/lesson10/exercise01/finished/index.html
+++ b/lesson10/exercise01/finished/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lesson 10: Exercise 01: link - finished</title>
-	    <link href="styles.css" rel="stylesheet" media="print">
+	    <link href="styles.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<h1>
