--- a/lesson10/exercise02/start/index.html
+++ b/lesson10/exercise02/start/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Lesson 10: Exercise 02: @import - finished</title>
+		<title>Lesson 10: Exercise 02: @import - start</title>
 	    <link href="styles.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>
-			Lesson 10: Exercise 02: @import - finished
+			Lesson 10: Exercise 02: @import - start
 		</h1>
 	</body>
 </html>
