--- a/lesson05/exercise01/finished/index.html
+++ b/lesson05/exercise01/finished/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Lesson 05: Exercise 01 - Understanding specificity - finished</title>
+		<title>Lesson 05: Exercise 01 - Understanding specificity - start</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<h1>
-			Lesson 05: Exercise 01 - Understanding specificity - finished
+			Lesson 05: Exercise 01 - Understanding specificity - start
 		</h1>
 		<h2>
-			This is a default level 2 heading
+			This is a heading level 2
 		</h2>
-		<h2 class="news" id="news" style="color: red;">
-			This is our styled level 2 heading
+		<p>
+			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. 
+		</p>
+		<h2 class="news" id="intro">
+			This is a heading level 2
 		</h2>
+		<p>
+			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut.
+		</p>
 		<table>
 			<thead>
 				<tr>
@@ -52,31 +58,7 @@
 					<td>0, 0, <b>1</b>, <b>1</b></td>
 				</tr>
 				<tr>
-					<td><code>h2[id] { color: grey; }</code></td>
-					<td>0</td>
-					<td>0</td>
-					<td><b>1</b></td>
-					<td><b>1</b></td>
-					<td>0, 0, <b>1</b>, <b>1</b></td>
-				</tr>
-				<tr>
-					<td><code>h2[class] { color: olive; }</code></td>
-					<td>0</td>
-					<td>0</td>
-					<td><b>1</b></td>
-					<td><b>1</b></td>
-					<td>0, 0, <b>1</b>, <b>1</b></td>
-				</tr>
-				<tr>
-					<td><code>h2[class=news] { color: lime; }</code></td>
-					<td>0</td>
-					<td>0</td>
-					<td><b>1</b></td>
-					<td><b>1</b></td>
-					<td>0, 0, <b>1</b>, <b>1</b></td>
-				</tr>
-				<tr>
-					<td><code>#news { color: purple; }</code></td>
+					<td><code>#intro { color: purple; }</code></td>
 					<td>0</td>
 					<td><b>1</b></td>
 					<td>0</td>
@@ -84,7 +66,7 @@
 					<td>0, <b>1</b>, 0, 0</td>
 				</tr>
 				<tr>
-					<td><code>h2#news { color: aqua; }</code></td>
+					<td><code>h2#intro { color: aqua; }</code></td>
 					<td>0</td>
 					<td><b>1</b></td>
 					<td>0</td>
