--- a/lesson08/exercise04/start/index.html
+++ b/lesson08/exercise04/start/index.html
@@ -13,8 +13,8 @@
 			<h2>
 				clear: left
 			</h2>
-			<img class="example01" src="a.jpg" alt="">
-			<p class="example03">
+			<img class="float01" src="a.jpg" alt="">
+			<p class="clear01">
 				Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 			</p>
 		</div>
@@ -22,8 +22,8 @@
 			<h2>
 				clear: right
 			</h2>
-			<img class="example02" src="a.jpg" alt="">
-			<p class="example04">
+			<img class="float02" src="a.jpg" alt="">
+			<p class="clear02">
 				Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 			</p>
 		</div>
@@ -31,9 +31,9 @@
 			<h2>
 				clear: both
 			</h2>
-			<img class="example01" src="a.jpg" alt="">
-			<img class="example02" src="a.jpg" alt="">
-			<p class="example05">
+			<img class="float01" src="a.jpg" alt="">
+			<img class="float02" src="a.jpg" alt="">
+			<p class="clear03">
 				Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 			</p>
 		</div>
