--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Lesson 01: Exercise 03 - External style sheet - start</title>
-
+		<title>Lesson 01: Exercise 03 - External style sheet - finished</title>
+	    <link href="styles.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>
-			Lesson 01: Exercise 03 - External style sheet - start
+			Lesson 01: Exercise 03 - External style sheet - finished
 		</h1>
 		<p>
 			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
