Updated code sample

--- a/index.html
+++ b/index.html
@@ -2,21 +2,52 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Lesson 01: Exercise 03 - External style sheet - finished</title>
+		<title>Lesson 02: Exercise 01 - CSS rules - start</title>
 	    <link href="styles.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>
-			Lesson 01: Exercise 03 - External style sheet - finished
+			Lesson 02: Exercise 01 - CSS rules - start
 		</h1>
-		<p>
-			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-		</p>
 		<h2>
-			Secondary heading
+			Heading level 2
 		</h2>
+		<h3>
+			Heading level 3
+		</h3>
+		<h4>
+			Heading level 4
+		</h4>
+		<h5>
+			Heading level 5
+		</h5>
+		<h6>
+			Heading level 6
+		</h6>
 		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+			Lorem ipsum dolor sit amet consect etuer <strong>adipi scing elit</strong> sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation <em>ullamcorper suscipit</em> lobortis nisl ut aliquip ex ea commodo consequat.
 		</p>
+		<ul>
+			<li>Ut wisi enim ad minim veniam</li>
+			<li>quis nostrud exerci tation</li>
+			<li>ullamcorper suscipit</li>
+			<li>lobortis nisl ut aliquip</li>
+			<li>ex ea commodo consequat</li>
+		</ul>
+		<p>
+			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+		</p>
+		<ol>
+			<li>Ut wisi enim ad minim veniam</li>
+			<li>quis nostrud exerci tation</li>
+			<li>ullamcorper suscipit</li>
+			<li>lobortis nisl ut aliquip</li>
+			<li>ex ea commodo consequat</li>
+		</ol>
+		<blockquote>
+			<p>
+				Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			</p>
+		</blockquote>
 	</body>
 </html>
